# smart_shopper

./: README.md  db.sqlite3  pyproject.toml
mysite/: settings.py  urls.py
shopping_api/: models.py  services.py  urls.py  views.py
shopping_api/migrations/: 0001_initial.py
